# stixor-chat

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: settings.py
backend/app/engine/: generate.py  loader.py  utils.py
frontend/: .env.example  .prettierrc  README.md  auth.ts  next.config.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/auth/sign-in/: page.tsx
frontend/app/components/: button-scroll-to-bottom.tsx  chat-section.tsx  empty-screen.tsx  header.tsx
frontend/app/components/ui/: button.tsx  file-uploader.tsx  input.tsx  sign-out-button.tsx  upload-image-preview.tsx
frontend/app/components/ui/chat/: chat-actions.tsx  chat-avatar.tsx  chat-input.tsx  chat-message.tsx  chat-messages.tsx  chat.interface.ts  codeblock.tsx  markdown.tsx
frontend/app/hooks/: use-scroll-anchor.tsx
