[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sanan bin Tahir <sananbintahir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
python-dotenv = "^1.0.0"
llama-index = "0.10.15"
llama-index-core = "0.10.15"
llama-index-agent-openai = "0.1.5"
llama-index-llms-together = "^0.1.3"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-llms-ollama = "^0.1.2"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.llama-index-vector-stores-postgres]
version = "^0.1.1"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"